examples/remote-git-sub-op/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: placement-nginx-service
spec:
  selector:
    app: nginx-placement
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
